<resources>
    <string name="app_name">Timetable of classes</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_list">List</string>
    <string name="title_favorites">Favorites</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="classes">Classes</string>
    <string name="open_in">Open in</string>
    <string name="homework">Homework</string>
    <string name="greeting">Hi, Guest!</string>
    <string name="grid_view">Grid view</string>
    <string name="list_view">List view</string>
    <string name="today">Today</string>
</resources>